2009-02-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-title-bar.h
	* src/home/hd-title-bar.c:
	  Allowed left_pressed to be used from outside (bug 101522)
	* src/home/hd-render-manager.c:
	  Added sync_after function, to change clutter visibilities if they
	  are needed to be done after a transition ends. Fixes bug with
	  zoomed button.
	* src/tidy/tidy-blur-group.c:
	  Added vignette effect for when zooming out
	* src/mb/hd-decor-button.c
	* src/mb/hd-decor-button.h:
	  Cleaned up and added handler for new matchbox press + release
	  signals, to make right buttons highlight correctly.

2009-02-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-title-bar.c (hd_title_bar_set_switcher_pulse):
	  Typo correction to not corrupt HdTitleBar::state when the last
	  notification is closed.

2009-02-11  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	  Now check if home_blur has really changed, and only update if it
	  has. This saves a ~150ms recalc of the blur texture
	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h
	* src/mb/hd-remote-texture.c:
	  Bugfixing and making remote-texture more like animation-actor
	  (It couldn't be treated like a window and still behave the way
          we needed it to)

2009-02-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#96795

	This is an old bug (tasks button accessible while sysmodal in front)
	but reappeared with HdTitleBar.  HDRM made the wrong actors unreactive.

	* src/home/hd-title-bar.c:
	  Removed dummy HdTitleBar::btn_switcher and ::btn_launcher, which
	  were taken over by buttons[BTN_SWITCHER] and buttons[BTN_LAUNCHER].
	  Make HDRM use these latter actors.
	* src/home/hd-render-manager.c:
	  Don't change the visibility of HDRM_BUTTON_TASK_NAV and
	  HDRM_BUTTON_LAUNCHER but leave it completely up to HdTitleBar.
	  Don't reparent them either.

2009-02-11  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
