@@ -390,13 +390,13 @@ tidy_frame_remove_actor (ClutterContainer *container,
       g_object_ref (priv->child);
 
       clutter_actor_unparent (priv->child);
-      priv->child = NULL;
 
       clutter_actor_queue_relayout (CLUTTER_ACTOR (container));
 
       g_signal_emit_by_name (container, "actor-removed", priv->child);
 
       g_object_unref (priv->child);
+      priv->child = NULL;
     }
 }
 
